# psifx

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  SAM3_INCONSISTENCIES_LOG.md  SETUP.md  agents.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/: CODEOWNERS
.github/workflows/: build-and-publish-pypi.yml  build-and-push-docker-v2.yml  build-and-push-docker.yml  create-tag-and-release.yml  run-tests.yml
docker/sam3-validation/: Dockerfile  README.md  run.sh  validate_sam3.sh
docs/: README.md  conf.py  index.md  requirements.txt
docs/_static/css/: custom.css
docs/_templates/: custom-module-template.rst
docs/api/: api.md
docs/cli/: audio.rst  index.md  text.rst  video.rst
docs/pages/: audio.md  bibliography.md  development.md  example.md  installation.md  text.md  usage.md  video.md
docs/reference/: api.md  cli.md
example/: README.md
examples/: chat_history.txt  default_instruction_sentiment.yaml  hf_llama3_4bit.json  hf_mistral_4bit.json  hf_mistral_4bit.yaml  input.csv  ollama_llama3_cpu.json  test_llm.py  transcription.csv  transcription.vtt  wrestling_instruction.yaml
examples/instructions/: sentiment.yaml  wrestling.yaml
examples/llm_configs/: hf_llama3_4bit.yaml  hf_mistral_4bit.yaml  llama3_instruct.yaml  ollama_llama3_cpu.yaml
psifx/: __init__.py  base_tool.py  command.py  scratch.py  stream_separation_tool.py  tool.py
psifx/audio/: __init__.py  command.py  extraction_tool.py  tool.py
psifx/audio/diarization/: __init__.py  base_tool.py  command.py  pyannote_tool.py  tool.py
psifx/audio/diarization/pyannote/: __init__.py  command.py  inference_tool.py  tool.py
psifx/audio/extraction/: tool.py
psifx/audio/identification/: __init__.py  command.py  tool.py
psifx/audio/identification/pyannote/: __init__.py  command.py  tool.py
psifx/audio/manipulation/: __init__.py  command.py  tool.py
psifx/audio/speech/: __init__.py  command.py  tool.py
psifx/audio/speech/opensmile/: __init__.py  command.py  scratch.ipynb  tool.py
psifx/audio/transcription/: __init__.py  base_tool.py  command.py  scratch.ipynb  tool.py  whisper_tool.py
psifx/audio/transcription/whisper/: __init__.py  command.py  inference_tool.py  scratch.py  tool.py
psifx/io/: csv.py  json.py  rttm.py  subtitles.py  tar.py  txt.py  video.py  vtt.py  wav.py  yaml.py
psifx/text/: __init__.py  command.py  tool.py
psifx/text/chat/: __init__.py  command.py  tool.py
psifx/text/instruction/: __init__.py  command.py  default_instruction.yaml  tool.py
psifx/text/llm/: __init__.py  command.py  tool.py
psifx/text/llm/anthropic/: __init__.py  command.py  tool.py
psifx/text/llm/configs/: __init__.py  anthropic.yaml  large-local.yaml  medium-local.yaml  openai.yaml  small-local.yaml
psifx/text/llm/hf/: __init__.py  command.py  tool.py
psifx/text/llm/ollama/: __init__.py  command.py  tool.py
psifx/text/llm/openai/: __init__.py  command.py  tool.py
psifx/text/tasc/: command.py  tool.py
psifx/text/tasc/analysis/: command.py  tool.py
psifx/text/tasc/evaluate/: command.py
psifx/text/tasc/form/: command.py  default_instruction.yaml  tool.py
psifx/text/tasc/marker/: command.py  default_instruction.yaml  tool.py
psifx/text/tasc/segment/: command.py  tool.py
psifx/utils/: __init__.py  command.py  constants.py  draw.py  huggingface.py  plot.py  tar.py  text_writer.py  timestamp.py
psifx/video/: __init__.py  command.py  tool.py
psifx/video/face/: __init__.py  command.py  inference_tool.py  tool.py
psifx/video/face/openface/: __init__.py  command.py  fields.py  inference_tool.py  skeleton.py  (+1 more)
psifx/video/manipulation/: __init__.py  command.py  tool.py
psifx/video/pose/: __init__.py  base_tool.py  command.py  inference_tool.py  mediapipe_tool.py  tool.py  visualisation_tool.py
psifx/video/tracking/: __init__.py  command.py  tool.py
tests/: README.md  __init__.py  test_structure.py
tests/integration/: README.md  __init__.py  conftest.py
tests/integration/audio/: test_diarization.py  test_identification.py  test_transcription.py
tests/integration/text/: test_llm.py
tests/integration/video/: test_mediapipe.py  test_openface.py  test_tracking.py
(+19 files in other folders)
